Bug 1227604 - Fix compositor event order; r=snorp, a=ritu

When the queue only contains compositor events, a compositor event
should go to the back of the queue to maintain order.

--HG--
extra : source : 3b624179e13b38ead88d6b3b06ff5703e1f2b4c3